@@ -539,9 +539,9 @@ int ospf_area_no_summary_unset (struct ospf *, struct in_addr);
 int ospf_area_nssa_set (struct ospf *, struct in_addr);
 int ospf_area_nssa_unset (struct ospf *, struct in_addr);
 int ospf_area_nssa_translator_role_set (struct ospf *, struct in_addr, int);
-int ospf_area_export_list_set (struct ospf *, struct ospf_area *, char *);
+int ospf_area_export_list_set (struct ospf *, struct ospf_area *, const char *);
 int ospf_area_export_list_unset (struct ospf *, struct ospf_area *);
-int ospf_area_import_list_set (struct ospf *, struct ospf_area *, char *);
+int ospf_area_import_list_set (struct ospf *, struct ospf_area *, const char *);
 int ospf_area_import_list_unset (struct ospf *, struct ospf_area *);
 int ospf_area_shortcut_set (struct ospf *, struct ospf_area *, int);
 int ospf_area_shortcut_unset (struct ospf *, struct ospf_area *);
@@ -553,7 +553,7 @@ int ospf_nbr_nbma_set (struct ospf *, struct in_addr);
 int ospf_nbr_nbma_unset (struct ospf *, struct in_addr);
 int ospf_nbr_nbma_priority_set (struct ospf *, struct in_addr, u_char);
 int ospf_nbr_nbma_priority_unset (struct ospf *, struct in_addr);
-int ospf_nbr_nbma_poll_interval_set (struct ospf *, struct in_addr, int);
+int ospf_nbr_nbma_poll_interval_set (struct ospf *, struct in_addr, unsigned int);
 int ospf_nbr_nbma_poll_interval_unset (struct ospf *, struct in_addr);
 void ospf_prefix_list_update (struct prefix_list *);
 void ospf_init ();
